--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     types: [opened, synchronize, labeled, unlabeled]
   workflow_run:
+    workflows: [version-bump"]
     types:
       - completed
 
