--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -12,14 +12,8 @@ permissions:
 jobs:
   version-bump:
     runs-on: ubuntu-latest
-    steps:
-      # - name: Generate a token
-      #   id: app-token
-      #   uses: actions/create-github-app-token@v1
-      #   with:
-      #     app-id: 1057549 # https://github.com/organizations/magichourhq/settings/apps/magic-hour-sdk-bot
-      #     private-key: ${{ secrets.SDK_GENERATOR_APP_PRIVATE_KEY }}
 
+    steps:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
@@ -72,18 +66,10 @@ jobs:
 
           sed -i "s/^version = \".*\"/version = \"$NEW_VERSION\"/" Cargo.toml
 
-      # - name: Get GitHub App User ID
-      #   id: get-user-id
-      #   run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
-      #   env:
-      #     GH_TOKEN: ${{ steps.app-token.outputs.token }}
-      # - name: Configure git user
-      #   run: |
-      #     git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
-      #     git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com>'
-
       - name: Commit changes
         run: |
-          git add .
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add Cargo.toml Cargo.lock
           git commit -m "chore: version bump" || echo "No changes to commit"
           git push
