--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -50,6 +50,8 @@ jobs:
 
       - name: Bump version
         if: steps.bump-type.outputs.TYPE != 'none'
+        id: bump-version
+        continue-on-error: true
         run: |
           VERSION_PARTS=(${MAIN_VERSION//./ })
           MAJOR=${VERSION_PARTS[0]}
@@ -67,6 +69,7 @@ jobs:
           sed -i "s/^version = \".*\"/version = \"$NEW_VERSION\"/" Cargo.toml
 
       - name: Commit changes
+        if: steps.bump-version.outcome == 'success'
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
