--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Rust API Client"
 license = "MIT"
 
 [target.x86_64-unknown-linux-musl.dependencies]
-openssl = { version = "0.10.46", features = ["vendored"] }
+openssl = { version = "*", features = ["vendored"] }
 
 [lib]
 crate-type = ["lib"]
