--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,9 +9,20 @@ on:
       - main
   pull_request: {}
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        rust_version:
+          - "1.80.0"
+          - "1.85.0"
+          - "stable"
     steps:
       #---------------------------------------------------
       #  -----  checkout & setup rust toolchain  -----
@@ -20,6 +31,8 @@ jobs:
         uses: actions/checkout@v4
       - name: setup rust
         uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust_version }}
       #---------------------------------------------------
       #  -----  install dependencies & run tests -----
       #---------------------------------------------------
